Fix Works tab panel visibility on desktop

--- a/CSS/works.css
+++ b/CSS/works.css
@@ -159,7 +159,7 @@
 }
 
 @media (min-width: 1025px) {
-  #projectsContent {
+  #projectsContent.active {
     height: 100%;
     display: flex;
     flex-direction: column;
